--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,20 +8,24 @@ services:
       - uploads:/rails/storage/uploads
       - db_data:/rails/storage
     environment:
+      # Required — app will not boot without these
       - SECRET_KEY_BASE=${SECRET_KEY_BASE}
       - RAILS_MASTER_KEY=${RAILS_MASTER_KEY}
-      - HOST=${HOST:-frankmega.example.com}
-      - WEBAUTHN_ORIGIN=${WEBAUTHN_ORIGIN:-https://frankmega.example.com}
-      - WEBAUTHN_RP_ID=${WEBAUTHN_RP_ID:-frankmega.example.com}
+      - HOST=${HOST}
+      - WEBAUTHN_ORIGIN=${WEBAUTHN_ORIGIN}
+      - WEBAUTHN_RP_ID=${WEBAUTHN_RP_ID}
+      - ACTIVE_RECORD_ENCRYPTION_PRIMARY_KEY=${ACTIVE_RECORD_ENCRYPTION_PRIMARY_KEY}
+      - ACTIVE_RECORD_ENCRYPTION_DETERMINISTIC_KEY=${ACTIVE_RECORD_ENCRYPTION_DETERMINISTIC_KEY}
+      - ACTIVE_RECORD_ENCRYPTION_KEY_DERIVATION_SALT=${ACTIVE_RECORD_ENCRYPTION_KEY_DERIVATION_SALT}
+      # SSL: defaults to true in production — set to false for local Docker testing without TLS
+      - FORCE_SSL=${FORCE_SSL:-true}
+      # Storage
       - STORAGE_PATH=/rails/storage/uploads
+      # SMTP (optional — leave blank to disable email delivery)
       - SMTP_ADDRESS=${SMTP_ADDRESS:-localhost}
       - SMTP_PORT=${SMTP_PORT:-587}
       - SMTP_USERNAME=${SMTP_USERNAME}
       - SMTP_PASSWORD=${SMTP_PASSWORD}
-      - ACTIVE_RECORD_ENCRYPTION_PRIMARY_KEY=${ACTIVE_RECORD_ENCRYPTION_PRIMARY_KEY}
-      - ACTIVE_RECORD_ENCRYPTION_DETERMINISTIC_KEY=${ACTIVE_RECORD_ENCRYPTION_DETERMINISTIC_KEY}
-      - ACTIVE_RECORD_ENCRYPTION_KEY_DERIVATION_SALT=${ACTIVE_RECORD_ENCRYPTION_KEY_DERIVATION_SALT}
-      - FORCE_SSL=${FORCE_SSL:-false}
     restart: unless-stopped
 
 volumes:
